--- a/application/views/scripts/pagination.phtml
+++ b/application/views/scripts/pagination.phtml
@@ -1,3 +1,4 @@
+<?php //TODO: Replace with pagination in index/index.phtml ?>
 <div class="pagination" style="width:100%">
     <div>
         <!-- First page link -->
