--- a/public/css/site.css
+++ b/public/css/site.css
@@ -16,7 +16,7 @@ th {
     text-align: left;
 }
 td, th {
-	padding-right: 5px;
+    padding-right: 5px;
 }
 /* style form */
 form dt {
@@ -31,7 +31,12 @@ form dd {
     
 }
 form #submitbutton {
-	margin-left: 100px;
+    margin-left: 100px;
+}
+
+#content {
+    max-width: 960px;
+    margin: 0 auto;
 }
 
 #photosets {
@@ -51,45 +56,46 @@ form #submitbutton {
     width: 80%;
     margin: 0 auto;
     text-align: center;
+    padding: 20px 0;
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-	/* iPhone, Android rules here */
-	body {
-		background: black;
-		color: rgb(179,179,179);
-		font-family: Helvetica;
-		font-size:12px;
-	}
-	h2 a {
-		color: rgb(179,179,179);
-	}
-	#content {
-		width: 320px;
-		margin: 0 auto;
-	}
-	#banner a {
-		color: rgb(179,179,179);
-	}
-	a {
-		color: rgb(179,179,179);
-	}
-	a:hover {
-		color: white;
-	}
-	
-	#ranking ul li{
-		margin: 0 5px 0 0;
-	}
-	
-	img {
-		border: 3px solid black;
-	}
-	
-	img.autoThumb {
-		border: 3px solid red;
-	}
-	
+    /* iPhone, Android rules here */
+    body {
+        background: black;
+        color: rgb(179,179,179);
+        font-family: Helvetica;
+        font-size:12px;
+    }
+    h2 a {
+        color: rgb(179,179,179);
+    }
+    #content {
+        width: 320px;
+        margin: 0 auto;
+    }
+    #banner a {
+        color: rgb(179,179,179);
+    }
+    a {
+        color: rgb(179,179,179);
+    }
+    a:hover {
+        color: white;
+    }
+    
+    #ranking ul li{
+        margin: 0 5px 0 0;
+    }
+    
+    img {
+        border: 3px solid black;
+    }
+    
+    img.autoThumb {
+        border: 3px solid red;
+    }
+    
     #photosets li {
         float:left;
         margin: 0 5px 5px 0;
