--- a/application/views/scripts/gallery/view.phtml
+++ b/application/views/scripts/gallery/view.phtml
@@ -1,16 +1,12 @@
 <?php
-	$modelname = $this->model->getModelName();
-	$this->title = $modelname->name;
-	$this->headTitle($this->title);
+    $this->title = $this->model->names[0]->name;
+    $this->headTitle($this->model->names[0]->name);
 ?>
 
-<?php
-/*
- * List images in Photoset
- */
+<?php echo $this->model->photosets[0]->name; ?>
 
-if ($this->data) : ?>
+<?php if ($this->data) : ?>
     <ul id="photosets">
-<?php echo $this->partialLoop('GalleryPartial.phtml', $this->data); ?>
+        <?php echo $this->partialLoop('GalleryPartial.phtml', $this->data); ?>
     </ul>
 <?php endif; ?>
