Added search via url and order by name and ranking

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -2,18 +2,18 @@
     $this->title = "Goddesses";
 ?>
     <p>
-        <a href="<?php echo $this->url(array('controller'=>'model', 'action'=>'add'));?>">Add a new model</a>
+        <a href="<?php echo $this->url(array('controller'=>'model', 'action'=>'add', 'page' => null, 'search' => null, 'order' => null));?>">Add a new model</a>
     </p>
 
     <p>
-        <a href="<?php echo $this->url(array('order' => 'ranking_desc'));?>">Ranking</a>
-        <a href="<?php echo $this->url(array('order' => 'name_asc'));?>">Name</a>
+        <a href="<?php echo $this->url(array('order' => 'ranking'));?>">Ranking</a>
+        <a href="<?php echo $this->url(array('order' => 'name'));?>">Name</a>
     </p>
 
     <ul id="photosets">
 <?php foreach($this->models as $model): ?>
         <li>
-            <a href="<?php echo $this->url(array('controller'=>'model', 'action'=>'view', 'id'=>$model->ID, 'page' => null)); ?>">
+            <a href="<?php echo $this->url(array('controller'=>'model', 'action'=>'view', 'id'=>$model->ID, 'page' => null, 'search' => null, 'order' => null)); ?>">
                 <img src="<?php echo $this->url(array('controller'=>'image', 'action'=>'thumbnail', 'id'=>rawurlencode($model->photosets[0]->thumbnail), 'page' => null)); ?>" />
                 <div class="name">
                     <?php echo $model->names[0]->name ;?>
