--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -24,24 +24,4 @@
 <?php endforeach; ?>
     </ul>
 
-<?php $pagerRange = $this->paginator->getRange('Sliding', array('chunk' => 7))->rangeAroundPage(); ?>
-
-<?php if ($this->paginator->haveToPaginate()): ?>
-<div class="pagination" style="width:100%">
-    <div>
-        <a href="<?php echo $this->url(array('page' => $this->paginator->getFirstPage())); ?>">&lt;&lt;</a>
-        <a href="<?php echo $this->url(array('page' => $this->paginator->getPreviousPage())); ?>">&lt;</a>
-        <?php foreach ($pagerRange as $page): ?>
-            <?php
-            if ($page != $this->paginator->getPage()) {
-                echo '<a href="' . $this->url(array('page' => $page)) . '">' . $page . '</a> ';
-            } else {
-                echo $page.' ';
-            }
-            ?>
-        <?php endforeach; ?>
-        <a href="<?php echo $this->url(array('page' => $this->paginator->getNextPage())); ?>">&gt;</a>
-        <a href="<?php echo $this->url(array('page' => $this->paginator->getLastPage())); ?>">&gt;&gt;</a>
-    </div>
-</div>
-<?php endif; ?>
+<?php echo $this->partial('pagination.phtml', array('paginator' => $this->paginator))?>
