Added Site tile with link and reduce other titles to h2

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -11,7 +11,8 @@ echo $this->doctype(); ?>
 </head>
 <body>
 <div id="content">
-    <h1><?php echo $this->escape($this->title); ?></h1>
+    <h1><a href="<?php echo $this->url(array('controller' => 'index', 'action' => 'index'), null, true);?>">Goddesses</a></h1>
+    <h2><?php echo $this->escape($this->title); ?></h2>
     <?php echo $this->layout()->content; ?>
 </div>
 </body>
