--- a/public/css/site.css
+++ b/public/css/site.css
@@ -8,6 +8,10 @@ h1 {
     font-size: 1.4em;
     color: #008000;
 }
+h2 {
+    font-size: 1.2em;
+    color: #008000;
+}
 a {
     color: #008000;
 }
