--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -22,3 +22,5 @@
     </ul>
 
 <?php echo $this->partial('pagination.phtml', array('paginator' => $this->paginator))?>
+
+<img src="http://zf.local/image/external/?referer=http://mx1.www.redpornblog.com/hot-adriana-malkova-posing-in-red-bikini&url=http://91.83.237.41/absoluteadriana.com/0009/tn_00.jpg&width=80" />
