--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -2,48 +2,46 @@
     <li><a href="<?php echo $this->url(array('action' => 'ranking'));?>">Try Again</a></li>
 </ul>
 
-<div id="ranking">
-    <ul class="clearfix">
-        <?php
-            foreach ($this->modelKeys as $modelKey):
-                $model = $this->models[$modelKey];
-                $photoset = $model->getRandomPhotoset();
-        ?>
-        <li>
+<ul id="ranking" class="clearfix">
+    <?php
+        foreach ($this->modelKeys as $modelKey):
+            $model = $this->models[$modelKey];
+            $photoset = $model->getRandomPhotoset();
+    ?>
+    <li>
+        <div class="image">
+            <a href="<?php echo $this->url(array('controller' => 'gallery', 'action' => 'view', 'id' => $model->ID, 'photoset' => $photoset->id)); ?>">
+                <img src="<?php echo $this->url(array('controller' => 'image', 'action' => 'medium', 'id' => rawurlencode($photoset->thumbnail), 'page' => null)); ?>" />
+            </a>
+        </div>
+        <strong class="block">
+            <a href="<?php echo $this->url(array('action' => 'view', 'id' => $model->ID)); ?>"><?php echo $model->getName(); ?></a>
+        </strong>
+        <div>
+            <a href="<?php echo $this->url(array('controller' => 'gallery', 'action' => 'thumbnail', 'id' => $model->ID, 'photoset' => $photoset->id)); ?>"><?php echo $photoset->manual_thumbnail ? 'Manual' : 'Auto'; ?> Thumbnail</a>
+        </div>
+        <div>
+            Rank = <?php echo $model->ranking; ?> (<?php echo count($this->models->toArray()); ?>)
+        </div>
+        <div>
+            Photosets = <?php echo count($model->photosets); ?>
+        </div>
+        <form action="<?php echo $this->url(array('action' => 'ranking')); ?>" method="post">
             <div>
-                <a href="<?php echo $this->url(array('controller' => 'gallery', 'action' => 'view', 'id' => $model->ID, 'photoset' => $photoset->id)); ?>">
-                    <img src="<?php echo $this->url(array('controller' => 'image', 'action' => 'medium', 'id' => rawurlencode($photoset->thumbnail), 'page' => null)); ?>" />
-                </a>
+                <input type="checkbox" id="search<?php echo $model->ID; ?>" name="search"<?php echo $model->search ? ' checked="checked"' : ''; ?> />
+                <label for="search<?php echo $model->ID; ?>">Search</label>
+                <?php echo date("d-m-Y", strtotime($model->datesearched)); ?>
             </div>
-            <strong class="block">
-                <a href="<?php echo $this->url(array('action' => 'view', 'id' => $model->ID)); ?>"><?php echo $model->getName(); ?></a>
-            </strong>
-            <div>
-                <a href="<?php echo $this->url(array('controller' => 'gallery', 'action' => 'thumbnail', 'id' => $model->ID, 'photoset' => $photoset->id)); ?>"><?php echo $photoset->manual_thumbnail ? 'Manual' : 'Auto'; ?> Thumbnail</a>
-            </div>
-            <div>
-                Rank = <?php echo $model->ranking; ?> (<?php echo count($this->models->toArray()); ?>)
-            </div>
-            <div>
-                Photosets = <?php echo count($model->photosets); ?>
-            </div>
-            <form action="<?php echo $this->url(array('action' => 'ranking')); ?>" method="post">
-                <div>
-                    <input type="checkbox" id="search<?php echo $model->ID; ?>" name="search"<?php echo $model->search ? ' checked="checked"' : ''; ?> />
-                    <label for="search<?php echo $model->ID; ?>">Search</label>
-                    <?php echo date("d-m-Y", strtotime($model->datesearched)); ?>
-                </div>
-                <!-- Stats
-                <a href="weblinks.php?action=0&model={$link.id}">WL = {$link.weblinks}</a>
-                <a href="weblinks.php?action=2&model={$link.id}">WT = {$link.webthumbs}</a>
-                <a href="weblinks.php?action=6&model={$link.id}">WI = {$link.webimages}</a>
-                 -->
-                <input type="hidden" name="model_id" value="<?php echo $model->ID; ?>" />
-                <input type="submit" value="Rate!" />
-            </form>
+            <!-- Stats
+            <a href="weblinks.php?action=0&model={$link.id}">WL = {$link.weblinks}</a>
+            <a href="weblinks.php?action=2&model={$link.id}">WT = {$link.webthumbs}</a>
+            <a href="weblinks.php?action=6&model={$link.id}">WI = {$link.webimages}</a>
+             -->
+            <input type="hidden" name="model_id" value="<?php echo $model->ID; ?>" />
+            <input type="submit" value="Rate!" />
+        </form>
 
-            <?php //var_dump($model->getWebLinkStats()->toArray() ); ?>
+        <?php //var_dump($model->getWebLinkStats()->toArray() ); ?>
 
-        <?php endforeach; ?>
-    </ul>
-</div>
+    <?php endforeach; ?>
+</ul>
