--- a/application/views/scripts/pagination.phtml
+++ b/application/views/scripts/pagination.phtml
@@ -2,8 +2,12 @@
 <?php $pagerRange = $this->paginator->getRange('Sliding', array('chunk' => 7))->rangeAroundPage(); ?>
 <div class="pagination" style="width:100%">
     <div>
-        <a href="<?php echo $this->url(array('page' => $this->paginator->getFirstPage())); ?>">&lt;&lt;</a>
-        <a href="<?php echo $this->url(array('page' => $this->paginator->getPreviousPage())); ?>">&lt;</a>
+
+        <?php if ($this->paginator->getFirstPage() != $this->paginator->getPage()): ?>
+            <a href="<?php echo $this->url(array('page' => $this->paginator->getFirstPage())); ?>">&lt;&lt;</a>
+            <a href="<?php echo $this->url(array('page' => $this->paginator->getPreviousPage())); ?>">&lt;</a>
+        <?php endif; ?>
+
         <?php foreach ($pagerRange as $page): ?>
             <?php
             if ($page != $this->paginator->getPage()) {
@@ -13,8 +17,12 @@
             }
             ?>
         <?php endforeach; ?>
-        <a href="<?php echo $this->url(array('page' => $this->paginator->getNextPage())); ?>">&gt;</a>
-        <a href="<?php echo $this->url(array('page' => $this->paginator->getLastPage())); ?>">&gt;&gt;</a>
+
+        <?php if ($this->paginator->getLastPage() != $this->paginator->getPage()): ?>
+            <a href="<?php echo $this->url(array('page' => $this->paginator->getNextPage())); ?>">&gt;</a>
+            <a href="<?php echo $this->url(array('page' => $this->paginator->getLastPage())); ?>">&gt;&gt;</a>
+        <?php endif; ?>
+
     </div>
 </div>
 <?php endif; ?>
