Updates from today remotely. Mainly getting the model ranking array corrected.

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,6 +1,7 @@
     <ul id="menu" class="clearfix">
         <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'add', 'page' => null, 'search' => null, 'order' => null));?>">Add a new model</a></li>
         <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'ranking')); ?>">Ranking</a></li>
+        <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'stats')); ?>">Stats</a></li>
     </ul>
 
     <div id="filter" class="clearfix">
