--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -11,8 +11,8 @@
         <?php echo $this->headTitle(); ?>
         <?php echo $this->headLink()->prependStylesheet($this->baseUrl().'/css/site.css'); ?>
 
-        <!-- Designed Fro BlackBerry 320px width -->
-        <meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
+        <!-- Designed Fro BlackBerry 320px width - 8px scrollbar -->
+        <meta name="viewport" content="width=312; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
     </head>
     <body>
         <div id="content">
