--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -1,3 +1,6 @@
+<?php
+    $this->headTitle('Ranking');
+?>
 <ul id="menu" class="clearfix">
     <li><a href="<?php echo $this->url(array('action' => 'ranking'));?>">Try Again</a></li>
 </ul>
