--- a/public/css/site.css
+++ b/public/css/site.css
@@ -8,7 +8,8 @@ h1 {
     font-size: 1.4em;
     color: #000000;
     text-align: center;
-    margin: 0 0 10px 0;
+    margin: 0 auto 10px auto;
+    width: 40%;
 }
 h2 {
     font-size: 1.2em;
