--- a/application/views/scripts/gallery/thumbnail.phtml
+++ b/application/views/scripts/gallery/thumbnail.phtml
@@ -9,20 +9,24 @@
 <pre><?php // var_dump($this->photoset->toArray());?></pre>
 
 <form action="<?php echo $this->url(array('action' => 'thumbnail')); ?>" method="post">
+
     <?php if (is_array($this->files)): ?>
-    <ul id="photosets" class="clearfix">
-        <?php foreach ($this->files as $file):?>
-        <li class="<?php echo $this->photoset->thumbnail != $file['uri'] ? '' : 'autoThumb'; ?>">
-            <label for="<?php echo md5($file['name']); ?>" class="image" >
-                <img src="<?php echo $this->url(array('controller' => 'image', 'action' => 'thumbnail', 'id' => rawurlencode($file['uri']), 'photoset' => null)); ?>" />
-            </label>
-            <input type="radio" id="<?php echo md5($file['name']); ?>" name="thumbnail" value="<?php echo $file['uri']; ?>" <?php echo $this->photoset->thumbnail == $file['uri'] ? ' checked="checked"' : ''; ?> />
-        </li>
-        <?php endforeach; ?>
-    </ul>
+        <ul id="photosets" class="clearfix">
+            <?php foreach ($this->files as $file):?>
+            <li class="<?php echo $this->photoset->thumbnail != $file['uri'] ? '' : 'autoThumb'; ?>">
+                <label for="<?php echo md5($file['name']); ?>" class="image" >
+                    <img src="<?php echo $this->url(array('controller' => 'image', 'action' => 'thumbnail', 'id' => rawurlencode($file['uri']), 'photoset' => null)); ?>" />
+                </label>
+                <input type="radio" id="<?php echo md5($file['name']); ?>" name="thumbnail" value="<?php echo $file['uri']; ?>" <?php echo $this->photoset->thumbnail == $file['uri'] ? ' checked="checked"' : ''; ?> />
+            </li>
+            <?php endforeach; ?>
+        </ul>
     <?php else:?>
-    <?php echo $this->files; ?>
+        <div>
+            <?php echo $this->files; ?>
+        </div>
     <?php endif; ?>
+
     <input type="hidden" name="refferer" value="<?php echo $_SERVER['HTTP_REFERER']; ?>" />
     <button type="submit">Update</button>
     <input type="checkbox" name="disable" value="1" id="disableCheckbox" <?php echo $this->photoset->active ? '' : ' checked="checked"'; ?> /><label for="disableCheckbox">Disable photoset</label>
